--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "projects",
+  "name": "planzea",
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Makuwro/projects.git"
+    "url": "https://github.com/Makuwro/planzea.git"
   },
   "type": "module",
   "homepage": "https://makuwro.com",
   "bugs": {
-    "url": "https://github.com/Makuwro/projects/issues",
+    "url": "https://github.com/Makuwro/planzea/issues",
     "email": "staff@makuwro.com"
   },
   "version": "1.0.0",
@@ -21,27 +21,23 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.4.6",
     "bson-objectid": "^2.0.4",
     "dexie": "^3.2.3",
     "html-react-parser": "^3.0.8",
-    "makuwro": "github:makuwro/library",
-    "makuwro-errors": "github:Makuwro/errors",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "sanitize-html": "^2.9.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/sanitize-html": "^2.8.0",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "assert": "^2.0.0",
     "babel-loader": "^9.1.2",
     "browserify-zlib": "^0.2.0",
@@ -49,7 +45,7 @@
     "core-js": "^3.27.2",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.3",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
