--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/no-empty-function": "warn",
     "@typescript-eslint/semi": ["warn", "always"],
     "@typescript-eslint/no-inferrable-types": "warn",
-    "@typescript-eslint/ban-types": "warn"
+    "@typescript-eslint/ban-types": "warn",
+    "no-var": "warn"
   }
 }
