--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
+    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
