--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bson-objectid": "^2.0.4",
     "dexie": "^3.2.3",
+    "dexie-export-import": "^4.0.7",
     "html-react-parser": "^3.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
