--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/semi": ["warn", "always"],
     "@typescript-eslint/no-inferrable-types": "warn",
     "@typescript-eslint/ban-types": "warn",
-    "no-var": "warn"
+    "no-var": "warn",
+    "no-cond-assign": "off"
   }
 }
